--- a/money/client/src/index.css
+++ b/money/client/src/index.css
@@ -10,6 +10,10 @@
   display: none !important;
 }
 
+::-moz-focus-inner {
+  border: 0;
+}
+
 html {
   font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -45,5 +49,11 @@ button, input, select, textarea
   text-align: inherit;
   padding: 0;
   margin: 0;
+  outline: 0;
+}
+
+a {
+  color: inherit;
+  font: inherit;
   outline: 0;
 }
